# StutyFFmpegFromZero

./: README.md  settings.gradle  音视频cmake入门.md  音视频一.md  音视频二.md
app/: build.gradle
app/src/androidTest/java/com/ancely/jni/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/libget/: CMakeLists.txt  get.c  get2.c  get3.c  getutil.h
app/src/main/java/com/ancely/jni/ffmpeg/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ancely/jni/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
